2009-11-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix the `mandel' demo.
	
	* benchmarks/mandel/mandel.c: Read the bounding box coordinates in
	the correct order.
	
	* benchmarks/mandel/mandel.d1,
	* benchmarks/mandel/mandel.d2: Fix Fibre array bounds.

2009-11-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor benchmarking fix.

	* benchmarks/lib/benchmark.c: Also print headers when using
	CSV. Delimit benchmarking output with "### begin" and "### end"
	markers.

2009-11-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Generation source archives suitable for Unibench automatically.
	
	* build-aux/benchmarks.mk: Add new target `ub-archives'. This
	generates one tar file per benchmark set in `$(BENCHMARKS)'.

2009-11-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.

	* benchmarks/blas/Makefile.am: Also distribute the benchmarking
	templates and `blasbench.h'.

2009-11-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in BLAS benchmarks.

	* benchmarks/blas/templates/bench-xrot.c: Properly read array
	`sx'.

2009-11-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor benchmarking fix.
	
	* benchmarks/lib/benchmark.c: Do not pad Fibre arrays in the
	output.

2009-11-18  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update the BLAS benchmarks to comply to Unibench specifications.
	
	* benchmarks/blas/blasbench.h,
	* benchmarks/blas/templates/bench-xasum.c,
	* benchmarks/blas/templates/bench-xaxpy.c,
	* benchmarks/blas/templates/bench-xcopy.c,
	* benchmarks/blas/templates/bench-xdot.c,
	* benchmarks/blas/templates/bench-xiamax.c,
	* benchmarks/blas/templates/bench-xnrm2.c,
	* benchmarks/blas/templates/bench-xrot.c,
	* benchmarks/blas/templates/bench-xscal.c,
	* benchmarks/blas/templates/bench-xswap.c: New.

	* benchmarks/blas/bench-dasum.c, benchmarks/blas/bench-daxpy.c,
	benchmarks/blas/bench-dcopy.c, benchmarks/blas/bench-ddot.c,
	benchmarks/blas/bench-dnrm2.c, benchmarks/blas/bench-drot.c,
	benchmarks/blas/bench-dscal.c, benchmarks/blas/bench-dswap.c,